Ensure TextEdit's text is vertically aligned after resizing its height.

The current code only updates the alignment if the width of the
TextEdit changed, but we must also check if the height has changed.

Task-number: QTBUG-36069

[ChangeLog][QtQuick][TextEdit] Fixed TextEdit not vertically aligning
its text after having its height changed.

Change-Id: I0b2d6a7384457ca1018fc9899c82699e8ecfcbd4
Reviewed-by: J-P Nurmi <jpnurmi@digia.com>